--- a/app/views/demo/ui-bootstrap/ui-b.html
+++ b/app/views/demo/ui-bootstrap/ui-b.html
@@ -1,90 +1,9 @@
 <!DOCTYPE HTML>
 <div class="container" scrolly-scroll>
-    <p class="lead">Alert</p>
-    <div data-ng-controller="AlertDemoCtrl">
-        <alert data-ng-repeat="alert in alerts" type="{{alert.type}}" close="closeAlert($index)">{{alert.msg}}</alert>
-        <button class="btn btn-default" data-ng-click="addAlert()">Add Alert</button>
-    </div>
 
     <hr>
-    <p class="lead">Collapse</p>
-    <div data-ng-controller="CollapseDemoCtrl">
-        <button class="btn" data-ng-click="uidemoCollapsed = !uidemoCollapsed">Toggle collapse</button>
-        <p></p>
-        <div collapse="uidemoCollapsed">
-            <div class="well well-large">Some content</div>
-        </div>
-    </div>
-
-    <hr>
-    <p class="lead">Date Picker</p>
-    <div data-ng-controller="DatepickerDemoCtrl">
-        <div class="well pull-left">
-            <pre>Selected date is: <em>{{dt | date:'fullDate' }}</em></pre>
-
-            <h4>Inline</h4>
-            <div style="display:inline-block; min-height:290px;">
-                <datepicker ng-model="dt" min-date="minDate" show-weeks="true" datepicker-mode="radioModel" class="well well-sm"></datepicker>
-            </div>
-            <br>
-            <div class="btn-group">
-                <label class="btn btn-primary" ng-model="radioModel" btn-radio="'day'">Day</label>
-                <label class="btn btn-primary" ng-model="radioModel" btn-radio="'month'">Month</label>
-                <label class="btn btn-primary" ng-model="radioModel" btn-radio="'year'">Year</label>
-            </div>
-
-            <h4>Popup</h4>
-            <div class="row">
-                <div class="col-md-6">
-                    <p class="input-group">
-                        <input type="text" class="form-control" datepicker-popup="{{format}}" ng-model="dt" is-open="opened" min-date="minDate" max-date="'2015-06-22'" datepicker-options="dateOptions" date-disabled="disabled(date, mode)" ng-required="true" close-text="Close" />
-                        <span class="input-group-btn">
-                <button type="button" class="btn btn-default" ng-click="open($event)"><i class="glyphicon glyphicon-calendar"></i></button>
-              </span>
-                    </p>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-md-6">
-                    <label>Format:</label>
-                    <select class="form-control" ng-model="format" ng-options="f for f in formats">
-                        <option></option>
-                    </select>
-                </div>
-            </div>
-
-            <hr />
-            <button type="button" class="btn btn-sm btn-info" ng-click="today()">Today</button>
-            <button type="button" class="btn btn-sm btn-default" ng-click="dt = '2009-08-24'">2009-08-24</button>
-            <button type="button" class="btn btn-sm btn-danger" ng-click="clear()">Clear</button>
-            <button type="button" class="btn btn-sm btn-default" ng-click="toggleMin()" tooltip="After today restriction">Min date</button>
-        </div>
-    </div>
-
-    <hr>
-    <p class="lead">Modal</p>
-    <div data-ng-controller="ModalDemoCtrl">
-        <script type="text/ng-template" id="myModalContent.html">
-            < div class = modal - header >
-                < h3 > I 'm a modal!</h3>
-            </div>
-            <div class="modal-body">
-                <ul>
-                    <li data-ng-repeat="item in items">
-                        <a data-ng-click="selected.item = item">{{ item }}</a>
-                    </li>
-                </ul>
-                Selected: <b>{{ selected.item }}</b>
-            <div class="modal-footer">
-                <button class="btn btn-primary" data-ng-click="ok()">OK</button>
-                <button class="btn btn-warning" data-ng-click="cancel()">Cancel</button>
-            </div>
-        </script>
-
-        <button class="btn" data-ng-click="open()">Open a modal window!</button>
-        <p></p>
-        <div data-ng-show="selected">Selection from a modal: {{ selected }}</div>
-    </div>
+    <p class="lead">UI Bootstrap</p>
+    <a href="https://angular-ui.github.io/bootstrap" target="_blank">Official showcase</a>
 
     <hr>
     <p class="lead">Sliders</p>
