--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -1,133 +1,9 @@
-@import "fade";
-@import "grid";
+/*
+http://getbootstrap.com/components/#navbar-fixed-top
+The fixed navbar will overlay your other content, unless you add padding to the top of the <body>. Try out your own values or use our snippet below. Tip: By default, the navbar is 50px high.
+Make sure to include this after the core Bootstrap CSS.
+*/
 
-/* Put main CSS here */
 body {
-    background: #fafafa;
-    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-    color: #333;
-}
-
-.hero-unit {
-    margin: 50px auto 0 auto;
-    width: 900px;
-    font-size: 18px;
-    font-weight: 200;
-    line-height: 30px;
-    background-color: #F79608;
-    border-radius: 6px;
-    padding: 60px;
-}
-
-.hero-unit h1 {
-    font-size: 60px;
-    line-height: 1;
-    letter-spacing: -1px;
-}
-
-.trade-button {
-    width: 24px;
-}
-
-/* HTML5 logo */
-a.navbar-brand {
-    line-height: 14px;
-    font-size: 13px;
-    padding-bottom: 0;
-    padding-top: 11px;
-}
-
-a.navbar-brand img {
-    width: 28px;
-    margin-top: -16px;
-    margin-left: 10px;
-}
-
-/* To fit navbar on one line for small screens */
-.nav li a {
-    padding-left: 10px;
-    padding-right: 10px;
-}
-
-/* Slide effect */
-.myslide.ng-enter,
-.myslide.ng-leave {
-    position: absolute;
-    transition: .3s linear all;
-}
-
-.myslide.ng-enter {
-    left: 100%;
-}
-
-.myslide.ng-enter-active {
-    transform: translateX(-100%);
-}
-
-.myslide.ng-leave-active {
-    transform: translateX(-100%);
-}
-
-/* Slider: in IE10/11 an annoying tooltip will show up unless you add the following css */
-::-ms-tooltip {
-    display: none;
-}
-
-slider {
-    display:     block;
-    position:    relative;
-    height:      20px;
-    width:       300px;
-}
-
-slider span.bar {
-    height:     50%;
-    z-index:    0;
-    background: #ace;
-    left:       0;
-    top:        25%;
-    cursor:     pointer;
-    border-radius: 10px;
-}
-
-slider span.bar.selection {
-    background: #0a0;
-    opacity:    0.5;
-}
-
-slider span.bar.unselected {
-    width:      auto;
-    background: #a00;
-    opacity:    0.5;
-}
-
-slider span.pointer {
-    cursor:           pointer;
-    width:            20px;
-    top:              0;
-    bottom:           0;
-    background-color: #00a;
-    border-radius: 20px;
-}
-
-slider span.bubble {
-    font-size:   1.2em;
-    line-height: 1.4em;
-    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-    text-align:  center;
-    text-shadow: none;
-    top:         -1.3em;
-    cursor:      pointer;
-}
-
-slider span.bubble.selection {
-    top: 1.1em;
-}
-
-slider span.bubble.limit {
-    top: -1.1em;
-}
-
-.notetitle,.tagLookup {
-    cursor:pointer;
+    padding-top: 70px;
 }
