--- a/app/views/home.html
+++ b/app/views/home.html
@@ -1,15 +1,16 @@
 <!DOCTYPE html>
 <div class="container" scrolly-scroll ng-controller="homeController">
- <div class="jumbotron home">
-        <h1>{{greeting}} to 'showcase' </h1>
-             <p>Your project is ready.</p>
-  </div>
+    <div class="jumbotron home">
+        <h1>{{greeting}} to Appverse Showcase</h1>
+        <p>Your project is ready.</p>
+    </div>
 
-   <div class="text-center">
-    <p><b> Thank you for using AppVerse. </b></p>
-     <p>Check <a ng-href="https://appverse.gftlabs.com/showcase-html5/#/home">Appverse showcase </a> for some demos</p>
-  </div>
-      <div class="text-center col-md-4 col-md-offset-4">
+    <div class="text-center">
+        <p><b> Thank you for using AppVerse. </b>
+        </p>
+        <p>Check <a ng-href="https://appverse.gftlabs.com/showcase-html5/#/home">Appverse showcase </a> for some demos</p>
+    </div>
+    <div class="text-center col-md-4 col-md-offset-4">
 
         <ul class="list-inline">
             <li><a angular-ripple href="http://appverse.org/">Appverse.org</a>
