Added code with tabs and description of translate feature.

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -7,3 +7,14 @@ Make sure to include this after the core Bootstrap CSS.
 body {
     padding-top: 70px;
 }
+
+/* Styles used for Highlight.js */
+@import 'highlight';
+
+/* Style to add pointer for tabs as recommended by UI Angular bootstrap */
+.nav,
+.pagination,
+.carousel,
+.panel-title a {
+    cursor: pointer;
+}
