- Added abstract state demos - Added performance controller - Included only bootstrap collapse script - Removed unused modernizr - Fixed REST_CONFIG to be local - Added missing ngGrid module - Added webworker and dataloading states - Removed unused scrolly-scroll directive - Removed unneeded proxies in grunt config

--- a/app/views/charts.html
+++ b/app/views/charts.html
@@ -1,5 +1,5 @@
 <!DOCTYPE HTML>
-<div class="container" scrolly-scroll>
+<div class="container">
     <div class="page-header">
         <h1 id="navbar">Charts</h1>
     </div>
