--- a/app/views/components.html
+++ b/app/views/components.html
@@ -1,5 +1,5 @@
 <!DOCTYPE HTML>
-<div class="container" scrolly-scroll>
+<div class="container">
     <div class="row">
         <div class="col-lg-12">
             <div class="page-header">
@@ -178,3 +178,4 @@
         </div>
         <div class="clearfix"></div>
     </div>
+</div>
