--- a/app/views/theme.html
+++ b/app/views/theme.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<div class="container" scrolly-scroll>
+<div class="container">
 
     <div class="page-header" id="banner">
         <div class="row">
