--- a/app/views/about.html
+++ b/app/views/about.html
@@ -1,11 +1,11 @@
-<div class="container" scrolly-scroll>
+<div class="container">
     <div class="row">
         <div class="col-lg-12">
             <div class="page-header">
                 <h1 id="navbar">Appverse Web HTML5 Resources</h1>
             </div>
             <ul>
-                <li><a href="https://github.com/Appverse/appverse-web-html5-showcase">Source code</a>
+                <li><a href="https://github.com/Appverse/appverse-web-html5">Source code</a>
                 </li>
                 <li><a href="http://appverse.org">Appverse Web Main Page</a>
                 </li>
