--- a/app/views/home.html
+++ b/app/views/home.html
@@ -1,14 +1,12 @@
 <!DOCTYPE html>
-<div class="container" scrolly-scroll ng-controller="homeController">
+<div class="container" ng-controller="homeController">
     <div class="jumbotron home">
         <h1>{{greeting}} to Appverse Showcase</h1>
-        <p>Your project is ready.</p>
     </div>
 
     <div class="text-center">
         <p><b> Thank you for using AppVerse. </b>
         </p>
-        <p>Check <a ng-href="https://appverse.gftlabs.com/showcase-html5/#/home">Appverse showcase </a> for some demos</p>
     </div>
     <div class="text-center col-md-4 col-md-offset-4">
 
