--- a/app/views/translation.html
+++ b/app/views/translation.html
@@ -1,37 +1,30 @@
-<div class="container" scrolly-scroll>
-    <div class="row">
-        <div class="col-lg-12">
-            <div class="page-header">
-                <h1 id="navbar">Translate</h1>
-            </div>
-            <p><b>Select desired locale:</b>
-            </p>
-            <button class="btn btn-primary" ng-click="setLocale('es-ES')">es-ES</button>
-            <button class="btn btn-primary" ng-click="setLocale('en-US')">en-US</button>
-            <button class="btn btn-primary" ng-click="setLocale('ja-JP')">ja-JP</button>
-            <button class="btn btn-primary" ng-click="setLocale('ar-EG')">ar-EG</button>
+<!doctype html>
+<p>
+    <b>Select desired locale:</b>
+</p>
+<button class="btn btn-primary" ng-click="setLocale('es-ES')">es-ES</button>
+<button class="btn btn-primary" ng-click="setLocale('en-US')">en-US</button>
+<button class="btn btn-primary" ng-click="setLocale('ja-JP')">ja-JP</button>
+<button class="btn btn-primary" ng-click="setLocale('ar-EG')">ar-EG</button>
 
-            <h4>Date</h4>
+<h4>Date</h4>
 
-            <p>{{now | date:'fullDate'}}</p>
+<p>{{now | date:'fullDate'}}</p>
 
-            <h4>Currency</h4>
+<h4>Currency</h4>
 
-            <p>{{100 | currency}}</p>
+<p>{{100 | currency}}</p>
 
-            <h4>Number</h4>
+<h4>Number</h4>
 
-            <!-- Number should be rounded using locale -->
-            <p>{{1200300.456789 | number}}</p>
+<!-- Number should be rounded using locale -->
+<p>{{1200300.456789 | number}}</p>
 
-            <h4>Text</h4>
+<h4>Text</h4>
 
-            <p translate>WELCOME</p>
+<p translate>WELCOME</p>
 
-            <!-- With values -->
-            <p translate translate-values="{'name': 'Alex'}">WELCOME_NAME</p>
+<!-- With values -->
+<p translate translate-values="{'name': 'Alex'}">WELCOME_NAME</p>
 
-            <p id="translation" translate translate-values="{'name': '{{name}}', 'age': {{age}} }">WELCOME_NAME_AGE</p>
-        </div>
-    </div>
-</div>
+<p id="translation" translate translate-values="{'name': '{{name}}', 'age': {{age}} }">WELCOME_NAME_AGE</p>
