--- a/app/views/translation.html
+++ b/app/views/translation.html
@@ -60,7 +60,7 @@
                 <div>
                     <tabset>
                         <tab heading="Markup">
-                            <div hljs>
+                            <div hljs pre>
     <p><b>Select desired locale:</b></p>
 
     <button class="btn btn-primary" ng-click="setLocale('es-ES')">es-ES</button>
@@ -92,7 +92,7 @@
                             </div>
                         </tab>
                         <tab heading="JavaScript">
-                            <div hljs>
+                            <div hljs pre>
     angular.module('App.Controllers')
 
         .controller('TranslationController', ['$scope', '$translate', 'tmhDynamicLocale',
