--- a/app/views/demos.html
+++ b/app/views/demos.html
@@ -4,7 +4,7 @@
         <div class="col-lg-12">
 
             <div class="page-header">
-                <h1 id="navbar">Demos</h1>
+                <h1>Demos</h1>
             </div>
 
             <ul class="nav nav-tabs">
@@ -18,10 +18,7 @@
                     <a angular-ripple="" ui-sref=".dataloading"><i class="glyphicon glyphicon-plane"></i> Data Loading</a>
                 </li>
             </ul>
-            <div class="tab-content">
-                <div class="tab-pane active" ui-view autoscroll="false"></div>
-            </div>
-
+            <div class="well" ui-view autoscroll="false"></div>
         </div>
     </div>
 </div>
