--- a/app/styles/animations.scss
+++ b/app/styles/animations.scss
@@ -47,33 +47,10 @@
     animation-duration: 0.5s;
 }
 
-.ng-enter {
+.fade-in.ng-enter {
     animation: fadeIn 1s;
 }
 
-.ng-leave {
+.fade-in.ng-leave {
     animation: fadeOut 1s;
-}
-/* Slide */
-
-body {
-    overflow-x: hidden; //To avoid horizontal scrollbar on animation
-}
-
-.myslide.ng-enter,
-.myslide.ng-leave {
-    position: absolute;
-    transition: .3s linear all;
-}
-
-.myslide.ng-enter {
-    left: 100%;
-}
-
-.myslide.ng-enter-active {
-    transform: translateX(-100%);
-}
-
-.myslide.ng-leave-active {
-    transform: translateX(-100%);
 }
