Added link to plunker and removed b tags from translation markup file.

--- a/app/views/translation-markup.html
+++ b/app/views/translation-markup.html
@@ -24,8 +24,7 @@
 <p translate="WELCOME"></p>
 
 <!-- With values -->
-<p translate="WELCOME_NAME" translate-values="{'name': 'Alex'}"><b></b>
-</p>
+<p translate="WELCOME_NAME" translate-values="{'name': 'Alex'}"></p>
 
 <p translate="WELCOME_NAME_AGE" translate-values="{'name': '{{name}}', 'age': {{age}} }"></p>
 <!-- htmlmin:ignore -->
