--- a/app/views/translation.html
+++ b/app/views/translation.html
@@ -22,6 +22,17 @@
     </div>
 </div>
 
+<hr>
+
+<div class="row">
+    <div class="col-md-12">
+        <div class="pull-right">
+            <p>
+                <a class="btn btn-info" href="http://plnkr.co/edit/JP2x6jGvWpBThbc3dM9x?p=preview">View in Plunker</a>
+            </p>
+        </div>
+    </div>
+</div>
 
 <div class="row">
     <div class="col-md-12">
