--- a/app/views/demo/performance/performance.hpcontrols.html
+++ b/app/views/demo/performance/performance.hpcontrols.html
@@ -1,56 +1,67 @@
 <!doctype html>
 <div>
     <h3>Performance Strategies in data loading</h3>
-    <p>This demo shows different approaches to show a big chunk of data (more than 24000) from a REST endpoint.</p>
+    <p>This demo shows different approaches to show a big chunk of data (20 000 JSON objects) from a REST endpoint.</p>
 </div>
 <div class="row">
-    <div class="col-sm-7" ng-controller="normalGridController">
+    <div class="col-md-7" ng-controller="normalGridController">
         <p><b>No Caching</b><span ng-show="execTime != null && execTime != 0">&nbsp;- Time for render: {{ execTime }} ms.</span>
         </p>
         <div class="gridStyle" ng-grid="gridOptions"></div>
     </div>
-    <div class="col-sm-5">
+    <div class="col-md-5">
         <img src="images/griddata1.png">
         <br>
-        <div class="well">
-            EXPLANATION:
-            <br>In this case the function (RESTFactory#readList) used to retrieve a big chunk of data is not appropriate.
-            <br>This function has been designed to retrieve a tree of records with metadata about ancestors and related data in a single request. So, the big amount of data is increased its weight in 150% (average). Moreover, we do not use cache for the GET method.
-            <br>Evidently, it is not very efficient!
+        <br>
+        <div class="panel panel-primary">
+            <div class="panel-heading">Explanation</div>
+            <div class="panel-body">
+                In this case the function (RESTFactory#readList) used to retrieve a big chunk of data is not appropriate.
+                <br>This function has been designed to retrieve a tree of records with metadata about ancestors and related data in a single request. So, the big amount of data is increased its weight in 150% (average). Moreover, we do not use cache for the GET method.
+                <br>Evidently, it is not very efficient!
+            </div>
         </div>
     </div>
 </div>
-<hr>
+<br>
+
 <div class="row">
-    <div class="col-sm-7" ng-controller="optimizedGridController">
+    <div class="col-md-7" ng-controller="optimizedGridController">
         <p><b>Using Cache</b><span ng-show="execTime != null && execTime != 0">&nbsp;- Time for render: {{ execTime }} ms.</span>
         </p>
         <div class="gridStyle" ng-grid="gridOptions"></div>
     </div>
-    <div class="col-sm-5">
+    <div class="col-md-5">
         <img src="images/griddata2.png">
         <br>
-        <div class="well">
-            EXPLANATION:
-            <br>In this case we use a different strategy, using caching and the AngularJS's $http service to avoid metadata retrieving.
-            <br>The initial data load is lightly better but the performance is dramatically improved in navigation across pages of data.
+        <br>
+        <div class="panel panel-primary">
+            <div class="panel-heading">Explanation</div>
+            <div class="panel-body">
+                In this case we use a different strategy, using caching and the AngularJS's $http service to avoid metadata retrieving.
+                <br>The initial data load is lightly better but the performance is dramatically improved in navigation across pages of data.
+            </div>
         </div>
     </div>
 </div>
-<hr>
+<br>
+
 <div class="row">
-    <div class="col-sm-7" ng-controller="concurrentCallingDataController">
+    <div class="col-md-7" ng-controller="concurrentCallingDataController">
         <p><b>Concurrent Calling</b><span ng-show="execTime != null && execTime != 0">&nbsp;- Time for render: {{ execTime }} ms.</span>
         </p>
         <div class="gridStyle" ng-grid="gridOptions"></div>
     </div>
-    <div class="col-sm-5">
+    <div class="col-md-5">
         <img src="images/griddata3.png">
         <br>
-        <div class="well">
-            EXPLANATION:
-            <br>In this case we use a parallelized call to several REST resources, separately retrieving them an d combining in a single resource. This approach significatively improves the initial load of data.
-            <br>Moreover, navigation across data pages has a good performance. Maybe this is the best strategy to load a big chunk of data.
+        <br>
+        <div class="panel panel-primary">
+            <div class="panel-heading">Explanation</div>
+            <div class="panel-body">
+                In this case we use a parallelized call to several REST resources, separately retrieving them an d combining in a single resource. This approach significatively improves the initial load of data.
+                <br>Moreover, navigation across data pages has a good performance. Maybe this is the best strategy to load a big chunk of data.
+            </div>
         </div>
     </div>
 </div>
