--- a/app/views/translation.html
+++ b/app/views/translation.html
@@ -28,7 +28,7 @@
     <div class="col-md-12">
         <div class="pull-right">
             <p>
-                <a class="btn btn-info" href="http://plnkr.co/edit/JP2x6jGvWpBThbc3dM9x?p=preview">View in Plunker</a>
+                <a class="btn btn-primary" href="http://plnkr.co/edit/JP2x6jGvWpBThbc3dM9x?p=preview">View in Plunker</a>
             </p>
         </div>
     </div>
