--- a/app/views/demo/performance/performance.webworkers.html
+++ b/app/views/demo/performance/performance.webworkers.html
@@ -6,16 +6,19 @@
     <div class="form-inline">
         <div class="form-group">
             <label>Number of pooled workers:</label>
-            <select class="form-control" ng-model="poolSize" ng-options="threadsNumber.key as threadsNumber.value for threadsNumber in threadsNumbers">
+            <select class="form-control" ng-model="poolSize" ng-options="threadsNumber.key as threadsNumber.value for threadsNumber in threadsNumbers" ng-change="count=0;execTime=0">
             </select>
         </div>
         <button class="btn btn-primary" ng-click="run()">Run</button>
     </div>
+    <br>
 
-    <p>Time spent: {{ execTime }} ms.</p>
-
+    <div class="progress">
+        <div class="progress-bar" ng-class="{'progress-bar-striped':starttime, active:starttime, 'progress-bar-success':starttime||execTime}" role="progressbar" ng-style="{width: count / poolSize * 100 + '%'}" style="min-width:10%">
+            <span ng-bind="execTime"></span> ms
+        </div>
+    </div>
 </div>
-<br>
 
 <div class="row">
     <div class="col-xs-6">
