- Changed navbar item to UI, Content and Performance - Styled jumbotron background with Appverse primary color - Adjust body padding-top for the jumbotron - Added missing explanation panel on views - Renamed components view to UI-Bootstrap - Updated e2e tests URLs

--- a/app/styles/bootstrap.scss
+++ b/app/styles/bootstrap.scss
@@ -47,3 +47,12 @@
 @import "bootstrap/responsive-utilities";
 //THEME
 @import "theme/theme";
+.jumbotron {
+    background-color: $brand-primary;
+    h1 {
+        color: white;
+    }
+    p {
+        color: $gray-light;
+    }
+}
