Amended translation feature files, also aligned code in webworkers controller.

--- a/app/views/translation/translation.html
+++ b/app/views/translation/translation.html
@@ -1,6 +1,6 @@
 <div class="row">
     <div class="col-md-6">
-        <div ng-include src="'views/translation/translation-markup-code.html'"></div>
+        <div ng-include src="'views/translation/translation-code.html'"></div>
     </div>
 
     <div class="col-md-6">
@@ -30,10 +30,10 @@
 </div>
 
 <tabset>
-    <tab heading="Markup">
-        <pre hljs include="'views/translation/translation-markup-code.html'"></pre>
+    <tab heading="translation-view.html">
+        <pre hljs include="'views/translation/translation-code.html'" language="html"></pre>
     </tab>
-    <tab heading="JavaScript">
-        <pre hljs include="'views/translation/translation-javascript-code.html'"></pre>
+    <tab heading="translation-controller.js">
+        <pre hljs include="'scripts/controllers/translation-controller-code.js'" language="javascript"></pre>
     </tab>
 </tabset>
