- Added UI select view - Added page-header class to components titles

--- a/app/views/ui.html
+++ b/app/views/ui.html
@@ -15,6 +15,9 @@
         <li role="presentation" ng-class="{ active: $state.includes('ui-bootstrap') }">
             <a angular-ripple="" ui-sref="ui-bootstrap"><i class="glyphicon glyphicon-book"></i> UI Bootstrap</a>
         </li>
+        <li role="presentation" ng-class="{ active: $state.includes('ui-select') }">
+            <a angular-ripple="" ui-sref="ui-select"><i class="glyphicon glyphicon-book"></i> UI Select</a>
+        </li>
         <li role="presentation" ng-class="{ active: $state.includes('charts') }">
             <a angular-ripple="" ui-sref="charts"><i class="glyphicon glyphicon-stats"></i> Charts</a>
         </li>
