--- a/app/views/performance.html
+++ b/app/views/performance.html
@@ -1,4 +1,3 @@
-<!doctype html>
 <div class="jumbotron">
     <div class="container">
         <h1>Performance</h1>
@@ -13,6 +12,9 @@
         </li>
         <li role="presentation" ng-class="{ active: $state.includes('dataloading') }">
             <a angular-ripple="" ui-sref="dataloading"><i class="glyphicon glyphicon-plane"></i> Data Loading</a>
+        </li>
+        <li role="presentation" ng-class="{ active: $state.includes('cache') }">
+            <a angular-ripple="" ui-sref="cache"><i class="glyphicon glyphicon-plane"></i> IndexedDB</a>
         </li>
     </ul>
     <div class="well" ui-view autoscroll="false"></div>
