--- a/app/views/ui.html
+++ b/app/views/ui.html
@@ -21,6 +21,9 @@
         <li role="presentation" ng-class="{ active: $state.includes('charts') }">
             <a angular-ripple="" ui-sref="charts"><i class="glyphicon glyphicon-stats"></i> Charts</a>
         </li>
+        <li role="presentation" ng-class="{ active: $state.includes('ui-components') }">
+            <a angular-ripple="" ui-sref="ui-components"><i class="glyphicon glyphicon-book"></i> UI Components</a>
+        </li>
     </ul>
     <div class="well" ui-view autoscroll="false"></div>
 
