--- a/app/views/rest/rest.html
+++ b/app/views/rest/rest.html
@@ -16,6 +16,14 @@
     </div>
 </div>
 
+<div class="clearfix">
+    <div class="pull-right">
+        <p>
+            <a class="btn btn-primary" href="http://plnkr.co/edit/kkr77lqJtgghbOTOuErc?p=preview">View in Plunker</a>
+        </p>
+    </div>
+</div>
+
 <div>
     <tabset>
         <tab heading="users-view.html">
