--- a/app/views/security/security.html
+++ b/app/views/security/security.html
@@ -25,7 +25,7 @@
                     </label>
                 </div>
                 <input type="hidden" name="client_id" value="oauth-server-showcase-client">
-                <input type="hidden" name="redirect_uri" value="http://localhost:9000/#/security">
+                <input type="hidden" name="redirect_uri" value="{{url}}">
                 <input type="hidden" name="response_type" value="code">
                 <button angular-ripple type="submit" class="btn btn-primary">Submit</button>
             </form>
